# DBAOps-Agent-nonTestbed

./: .gitignore  README.md
agent/: Dockerfile  pyproject.toml
agent/src/dbaops_agent/: __init__.py  llm.py  pipeline_graph.py  runtime_entry.py  single_graph.py
agent/src/dbaops_agent/prompts/: _common.md  domain_db_metric.md  domain_log.md  domain_os_metric.md  report.md  revise.md  validation.md
agent/src/dbaops_agent/tools/: __init__.py  mcp_auto.py  mcp_client.py  mcp_tools.py
agent/tests/: test_analyzers.py  test_smoke.py
docs/: CUSTOMER_ONBOARDING.md  EXTERNAL_RESOURCES.md  QUICKSTART.md  SERVICE_GUIDE.md
docs/iam/: IAM_APPLY_GUIDE.md  dbaops-deployer-policy-1-compute.json  dbaops-deployer-policy-2-data.json  dbaops-deployer-policy.json
mcp_tools/: _base.Dockerfile
mcp_tools/aws_api/: handler.py  tool_io.json
mcp_tools/awslabs_aws_api/: Dockerfile  handler.py  requirements.txt  tool_io.json
mcp_tools/awslabs_aws_doc/: handler.py  requirements.txt  tool_io.json
mcp_tools/awslabs_cloudwatch/: Dockerfile  handler.py  requirements.txt  tool_io.json
mcp_tools/community_mysql/: Dockerfile  handler.mjs  package.json  tool_io.json
mcp_tools/community_postgres/: handler.py  requirements.txt  tool_io.json
mcp_tools/community_prometheus/: handler.py  requirements.txt  tool_io.json
mcp_tools/msk_metrics/: Dockerfile  handler.py  tool_io.json
mcp_tools/rds_pi/: handler.py  tool_io.json
mcp_tools/s3_log_fetch/: handler.py  (+1 more)
scripts/: build_agent_image.sh  build_mcp_images.sh  build_streamlit_image.sh  register_gateway_targets.py  run_streamlit.sh
(+27 files in other folders)
