[project]
name = "dbaops-agent"
version = "0.0.1"
description = "DBAOps-Agent — LangGraph + AgentCore DB metric analysis agent"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.0",
  "langgraph-supervisor>=0.0.31",
  "langchain-core>=0.3.0",
  "langchain-aws>=0.2.0",
  "boto3>=1.34.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "drain3>=0.9.11",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "sqlglot>=25.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbaops_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
